--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,16 +77,20 @@ jobs:
           echo "efivar" > live-build/config/package-lists/my.list.chroot
           echo "efibootmgr" >> live-build/config/package-lists/my.list.chroot
           echo "grub-pc" >> live-build/config/package-lists/my.list.chroot
+          echo "firmware-misc-nonfree" >> live-build/config/package-lists/my.list.chroot
+          echo "firmware-realtek" >> live-build/config/package-lists/my.list.chroot
           # Create a hook to install custom kernel and update initramfs
+          set -x
           cat << EOF > live-build/config/hooks/normal/0100-update-initramfs.hook.chroot
           #!/bin/sh
           set -e
+          set -x
           
           # Install the custom kernel
-          dpkg -i live-build/config/packages.chroot/linux-image-6.10.7_*.deb
+          dpkg -i /config/packages.chroot/linux-image-6.10.7_*.deb
           
           # Replace the default initrd with our custom one
-          cp live-build/config/packages.chroot/initrd.img-6.10.7-custom /boot/initrd.img-6.10.7
+          cp /config/packages.chroot/initrd.img-6.10.7-custom /boot/initrd.img-6.10.7
           
           # Update GRUB to use the new kernel and initrd
           update-grub
