--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
           # Move the kernel packages to a known location
           mkdir -p ../custom-kernel-debs
           mv ../*.deb ../custom-kernel-debs/
+          ls -al ../custom-kernel-debs/
     - name: Create Custom Initrd
       run: |
           KERNEL_VERSION=6.10.7
@@ -69,6 +70,8 @@ jobs:
           mkdir -p live-build/config/package-lists
           mkdir -p live-build/config/hooks/normal
           # Copy custom kernel .deb files to live-build package directory
+          echo "inhoud van custom-kernel-debs map"
+          ls -al custom-kernel-debs/
           cp custom-kernel-debs/*.deb live-build/config/packages.chroot/
           # Copy custom initrd to live-build package directory
           cp initrd.img-6.10.7-custom live-build/config/packages.chroot/
@@ -83,6 +86,8 @@ jobs:
           set -x
           
           # Install the custom kernel
+          echo "inhoud van chroot /"
+          ls -lR /
           dpkg -i /config/packages.chroot/linux-image-6.10.7_*.deb
           
           # Replace the default initrd with our custom one
