--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,29 +86,42 @@ jobs:
           echo "grub-pc" >> live-build/config/package-lists/my.list.chroot
           # Create a hook to install custom kernel and update initramfs
           cat << EOF > live-build/config/hooks/normal/0100-update-initramfs.hook.chroot
-          #!/bin/sh
-          set -e
-          
-          # Install the custom kernel
-          dpkg -i /live-build/config/packages.chroot/linux-image-6.10.7_*.deb
-          
-          # Replace the default initrd with our custom one
-          cp /live-build/config/packages.chroot/initrd.img-6.10.7-custom /boot/initrd.img-6.10.7
-          
-          # Update GRUB to use the new kernel and initrd
-          update-grub
+            #!/bin/sh
+            set -e
+            
+            # Install linux-firmware package to address missing firmware warnings
+            apt-get update
+            apt-get install -y linux-firmware
+            
+            # Install the custom kernel
+            dpkg -i /config/packages.chroot/linux-image-6.10.7_*.deb
+            
+            # Update initramfs for the new kernel
+            update-initramfs -c -k 6.10.7
+            
+            # Update GRUB configuration
+            update-grub
           EOF
           chmod +x live-build/config/hooks/normal/0100-update-initramfs.hook.chroot
           cd live-build    
     
           lb config -d bookworm --debian-installer none --archive-areas "main contrib non-free" \
-            --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
-
+            --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase" --bootloader grub2
+    
+    - name: Prepare chroot environment
+      run: |
+        sudo mount --bind /dev live-build/chroot/dev
+        sudo mount --bind /proc live-build/chroot/proc
+        sudo mount --bind /sys live-build/chroot/sys
     - name: Build Debian Live ISO with Custom Kernel and Initrd
       run: |
           cd live-build
-          sudo lb build
-
+              sudo lb build
+    - name: Clean up chroot mounts
+      run: |
+        sudo umount live-build/chroot/sys
+        sudo umount live-build/chroot/proc
+        sudo umount live-build/chroot/dev
     - name: Upload Live ISO
       uses: actions/upload-artifact@v3
       with:
