--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,64 +13,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget
-        sudo apt-get install -y build-essential fakeroot libncurses5-dev libssl-dev ccache bison flex libelf-dev libudev-dev libpci-dev libiberty-dev debhelper dpkg-dev debootstrap gpg debian-archive-keyring
+        sudo apt-get install -y wget live-build
         
-        wget https://ftp.debian.org/debian/pool/main/l/live-build/live-build_20240810_all.deb
-        sudo dpkg -i live-build_20240810_all.deb
-
-    - name: Download and Compile Custom Kernel
-      run: |
-          KERNEL_VERSION=6.10.7
-          wget https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${KERNEL_VERSION}.tar.xz
-          tar -xvf linux-${KERNEL_VERSION}.tar.xz
-          cd linux-${KERNEL_VERSION}
-          make defconfig
-          sed -i 's/# CONFIG_IPU_BRIDGE is not set/CONFIG_IPU_BRIDGE=y/' .config
-          sed -i 's/# CONFIG_VIDEO_INTEL_IPU6 is not set/CONFIG_VIDEO_INTEL_IPU6=y/' .config
-          sed -i 's/# CONFIG_INTEL_VSC is not set/CONFIG_INTEL_VSC=y/' .config
-          sed -i 's/# CONFIG_VIDEO_IPU3_CIO2 is not set/CONFIG_VIDEO_IPU3_CIO2=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP is not set/CONFIG_VIDEO_ATOMISP=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP_OV2722 is not set/CONFIG_VIDEO_ATOMISP_OV2722=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP_GC2235 is not set/CONFIG_VIDEO_ATOMISP_GC2235=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP_MSRLIST_HELPER is not set/CONFIG_VIDEO_ATOMISP_MSRLIST_HELPER=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP_MT9M114 is not set/CONFIG_VIDEO_ATOMISP_MT9M114=y/' .config
-          sed -i 's/# CONFIG_VIDEO_ATOMISP_GC0310 is not set/CONFIG_VIDEO_ATOMISP_GC0310=y/' .config
-          echo "CONFIG_IPU_BRIDGE=y" >> .config
-          echo "CONFIG_VIDEO_INTEL_IPU6=y" >> .config
-          echo "CONFIG_INTEL_VSC=y" >> .config
-          echo "CONFIG_VIDEO_IPU3_CIO2=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP_OV2722=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP_GC2235=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP_MSRLIST_HELPER=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP_MT9M114=y" >> .config
-          echo "CONFIG_VIDEO_ATOMISP_GC0310=y" >> .config
-          make -j$(nproc) bindeb-pkg
-          # Move the kernel packages to a known location
-          mkdir -p ../custom-kernel-debs
-          mv ../*.deb ../custom-kernel-debs/
-          ls -al ../custom-kernel-debs/
-
-    - name: Create Custom Initrd
-      run: |
-          KERNEL_VERSION=6.10.7
-          
-          # Install necessary tools
-          sudo apt-get install -y initramfs-tools
-          
-          # Create a temporary directory for initrd creation
-          mkdir -p custom_initrd
-          cd custom_initrd
-          
-          # Install the custom kernel modules
-          sudo dpkg -i ../custom-kernel-debs/linux-image-${KERNEL_VERSION}_*.deb
-          
-          # Create the initrd with the custom kernel modules
-          sudo mkinitramfs -o ../initrd.img-${KERNEL_VERSION}-custom ${KERNEL_VERSION}-custom
-          
-          # Move back to the main directory
-          cd ..
+    # Previous steps for kernel compilation and initrd creation remain the same
 
     - name: Configure live-build for Debian with Custom Kernel and Initrd
       run: |
@@ -78,7 +23,7 @@ jobs:
         mkdir -p live-build/config/package-lists
         mkdir -p live-build/config/hooks/normal
         mkdir -p live-build/config/includes.chroot/etc/default
-    
+
         # Copy custom kernel .deb files to live-build package directory
         cp custom-kernel-debs/*.deb live-build/config/packages.chroot/
         
@@ -120,52 +65,35 @@ jobs:
         
         cd live-build    
         
-        lb config -d bookworm --debian-installer none --archive-areas "main contrib non-free" \
+        sudo lb config -d bookworm --debian-installer none --archive-areas "main contrib non-free" \
           --debootstrap-options "--keyring=/usr/share/keyrings/debian-archive-keyring.gpg --variant=minbase"
-    
-    - name: Initialize live-build chroot
+
+    - name: Build Debian Live ISO
       run: |
         cd live-build
-        sudo lb bootstrap
-    
-    - name: Prepare chroot environment
-      run: |
-        if [ -d "live-build/chroot" ]; then
-          sudo mount --bind /dev live-build/chroot/dev
-          sudo mount --bind /proc live-build/chroot/proc
-          sudo mount --bind /sys live-build/chroot/sys
-        else
-          echo "Error: live-build/chroot directory does not exist"
-          exit 1
-        fi
-    
-    - name: Build Debian Live ISO with Custom Kernel and Initrd
-      run: |
-        cd live-build
+        sudo lb clean
         sudo lb build
       continue-on-error: true
-    
-    - name: Clean up chroot mounts
-      if: always()
-      run: |
-        if [ -d "live-build/chroot" ]; then
-          sudo umount -f live-build/chroot/sys || true
-          sudo umount -f live-build/chroot/proc || true
-          sudo umount -f live-build/chroot/dev || true
-        fi
-    
+
     - name: Check for ISO file
       run: |
-        if [ -f live-build/*.iso ]; then
+        if [ -f live-build/live-image-amd64.hybrid.iso ]; then
           echo "ISO file created successfully"
         else
           echo "Error: ISO file not created"
           exit 1
         fi
-    
+
     - name: Upload Live ISO
       if: success()
       uses: actions/upload-artifact@v3
       with:
         name: debian-live-custom-kernel-initrd.iso
-        path: live-build/*.iso
+        path: live-build/live-image-amd64.hybrid.iso
+
+    - name: Clean up
+      if: always()
+      run: |
+        cd live-build
+        sudo lb clean
+        sudo rm -rf chroot
