--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
         cd live-build
         
         # Initialize live-build configuration
-        lb config --distribution bookworm --archive-areas "main contrib non-free" --debian-installer none
+        lb config --distribution bookworm --archive-areas "main contrib non-free non-free-firmware" --debian-installer none
         
         # Create necessary directories
         mkdir -p config/packages.chroot config/package-lists config/hooks/normal config/includes.chroot/etc/default
@@ -92,6 +92,7 @@ jobs:
         efibootmgr
         grub-efi-amd64
         linux-image-amd64
+        linux-firmware
         EOF
         
         # Create GRUB default configuration
@@ -104,8 +105,7 @@ jobs:
         
         # Install linux-firmware package to address missing firmware warnings
         apt-get update
-        apt-get install -y linux-firmware
-        
+                
         # Install the custom kernel
         dpkg -i /config/packages.chroot/linux-image-6.10.7_*.deb
         
