--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         sudo dpkg -i live-build_20240810_all.deb
         #!/bin/bash -x
         # Patch for Debian bug 1059227 (see bugs.debian.org)
-        sudo patch -p1 -N -d /usr/lib/live/build <patches/firmwarelists.sh
+        sudo patch -p1 -N -d /lib/live/build <patches/firmwarelists.sh
       
     - name: Download and Compile Custom Kernel
       run: |
