--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4.1.7
 
     - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y wget
         sudo apt-get install -y build-essential fakeroot libncurses5-dev libssl-dev ccache bison flex libelf-dev libudev-dev libpci-dev libiberty-dev debhelper dpkg-dev debootstrap gpg debian-archive-keyring
-        
+        sudo apt-get install linux-firmware firmware-misc-nonfree firmware-realtek
         wget https://ftp.debian.org/debian/pool/main/l/live-build/live-build_20230502_all.deb
         sudo dpkg -i live-build_20230502_all.deb
         #!/bin/bash -x
@@ -103,10 +103,9 @@ jobs:
         efibootmgr
         grub-efi-amd64
         linux-image-amd64
-        firmware-linux-free
-        firmware-ath9k-htc
-        hdmi2usb-fx2-firmware
-        atmel-firmware
+        linux-firmware
+        firmware-misc-nonfree
+        firmware-realtek
         EOF
         
         # Create GRUB default configuration
@@ -177,7 +176,7 @@ jobs:
 
     - name: Upload Live ISO
       if: success()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: debian-live-custom-kernel-initrd.iso
         path: live-build/live-image-amd64.hybrid.iso
