--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,7 +113,6 @@ jobs:
         grub-efi-amd64
         linux-image-amd64
         firmware-linux
-        firmware-nonfree
         firmware-linux-nonfree
         EOF
         
@@ -132,7 +131,7 @@ jobs:
         
         # Install linux-firmware package to address missing firmware warnings
         apt-get update
-        apt-get install -y firmware-linux-nonfree firmware-nonfree firmware-linux-free amd64-microcode intel-microcode
+        apt-get install -y firmware-linux-nonfree firmware-linux-free amd64-microcode intel-microcode
         
         # Install the custom kernel
         dpkg -i /root/packages/linux-image-6.10.7_*.deb
